# ChatServer

./: CMakeLists.txt  README.md  autonuild.sh
include/: publicMsg.hpp
include/server/: chatserver.hpp  chatservice.hpp
include/server/database/: database.hpp
include/server/model/: FriendModel.hpp  UserModel.hpp  group.hpp  groupModel.hpp  groupuser.hpp  offlinemessagemodel.hpp  user.hpp
include/server/redis/: redis.hpp
src/client/: CMakeLists.txt  chatclient.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp
src/server/database/: database.cpp
src/server/model/: FriendModel.cpp  UserModel.cpp  groupModel.cpp  offlinemessagemodel.cpp
src/server/redis/: redis.cpp
test/textjson/: textjson.cpp
test/textmuduo/: CMakeLists.txt  muduo_server.cpp
